<resources>
    <string name="app_name">miamInstantApp</string>

    <!-- Common actions -->
    <string name="next">Siguiente</string>
    <string name="skip">Saltar</string>
    <string name="to_cook">¡A cocinar!</string>
    <string name="edit">Editar</string>
    <string name="none">Ninguna</string>
    <string name="start">Comenzar</string>

    <string name="article_name">Mayonesa hellmans</string>
    <string name="app_bottom_bar_menu_recipe_list_title">RecipeList</string>
    <string name="recipe_list_empty_message">No se encontraron recetas con los recursos actuales</string>
    <string name="recipe_book_empty_message">No se agregaron recetas aun.</string>
    <string name="shopping_cart_empty_message">El carrito de compras esta vacio.</string>


    <!-- Bottom bar -->
    <string name="app_bottom_bar_menu_dispensary_title">Heladera</string>
    <string name="app_bottom_bar_menu_recipe_book_title">Catalogo</string>
    <string name="app_bottom_bar_menu_recipebook_title">Recetario</string>
    <string name="app_bottom_bar_menu_shopping_cart_title">Compras</string>
    <string name="app_bottom_bar_menu_profile_title">Perfil</string>

    <!-- Diets -->
    <string name="vegan_name">Vegana</string>
    <string name="vegetarian_name">Vegetariana</string>
    <string name="vegan_description">Solo alimentos de origen vegetal</string>
    <string name="vegetarian_description">Sigo una dieta sin carne</string>
    <string name="celiac_description">Sigo una dieta libre de glúten</string>
    <string name="celiac_name">Celíaca</string>
    <string name="none_description">¡Como casi todo!</string>

    <string name="diets_list_title">¿Seguís alguna dieta?</string>

    <!-- Allergies -->
    <string name="allergies_filters_step_title">¿Tenes alguna alergia\n o intolerancia?</string>

    <!-- Address -->
    <string name="add_address_screen_title">¿Cual es tu ubicación?</string>
    <string name="add_address_screen_subtitle">Cuando te falten ingrediente para cocinar una receta, te voy a \nsugerir tiendas cercanas donde vas a poder comprarlos.</string>
    <string name="add_address_input_hint">Agrega una dirección</string>

    <!-- User filters steps -->
    <string name="step_1_of_3">Paso 1 de 3</string>
    <string name="step_2_of_3">Paso 2 de 3</string>
    <string name="step_3_of_3">Paso 3 de 3</string>
    <string name="dispensary_button">Ver recetas</string>
    <string name="selected_ingredients_title">Tengo</string>

    <!-- Dispensary -->
    <string name="dispensary">Heladera</string>
    <string name="add_ingredient_hint">Agregá un ingrediente</string>
    <string name="dispensary_empty_view_title">Tu heladera esta vacia.</string>
    <string name="dispensary_empty_view_subtitle">Empezá a llenarla buscando los ingredientes\n que tengas en tu casa</string>
    <string name="ingredient_item_volume_unit_with_quantity">%1$d %2$s</string>

    <!-- Edit user ingredient -->
    <string name="edit_user_ingredient_title">¿Cuanto tenés de este ingrediente?</string>

    <!-- Catalog Recipe list -->
    <string name="search_recipe_hint">Buscar recetas</string>
    <string name="search_ingredient_hint">Agregar ingredientes</string>
    <string name="card_recipe_fulfilled_text">Tenés todo</string>
    <string name="presentation_first_step_text">¡TE DOY LA BIENVENIDA!\nVengo a ser tu aliado\nen la cocina</string>
    <string name="presentation_second_step_text">CONTAME QUE INGREDIENTES\n TENÉS EN LA HELADERA</string>
    <string name="presentation_third_step_text">Y TE VOY A ENSEÑAR\nRECETAS QUE PUEDAS COCINAR\nCON ESOS INGREDIENTES</string>
    <string name="presentation_fourth_step_text">SI TE FALTA ALGUNO, TE VOY A SUGERIR tiendas cercanas para que puedas comprarlos</string>
    <string name="missing_ingredients_badge_text">Te faltan %1$d ingredientes</string>
    <string name="total_minutes">%1$d min</string>
    <string name="catalog_recipe_market_ingredients_header">Te falta</string>
    <string name="catalog_recipe_user_ingredients_header">Tenés</string>
    <string name="suggested_ingredients_title">Seleccioná los ingredientes que tenés</string>

    <string name="catalog_recipe_list_new_search_title">Buscá recetas nuevas!</string>
    <string name="catalog_recipe_list_new_search_subtitle">Podes agregar los ingredientes que tengas\nen tu casa o buscar una receta en particular</string>

    <!-- Recipe detail -->
    <string name="recipe_ingredients_tab_title">Ingredientes</string>
    <string name="recipe_preparation_tab_title">Preparacion</string>
    <string name="recipe_detail_have_ingredient_action">Si lo tengo</string>

    <!-- Recipe card -->
    <string name="recipe_card_price">- $%1$d</string>

    <!-- Catalog Recipe filters -->
    <string name="catalog_recipes_time_amount_filter_title">¿Cuánto tiempo tenés?</string>
    <string name="catalog_recipes_diets_filter_title">¿?</string>


    <!-- Market ingredients addded to shopping list -->
    <string name="market_ingredients_added_to_shopping_list_title">Agregaste ingredientes\na tu carrito de compras</string>

</resources>
