<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/appBarRecipeList"
        android:icon="@drawable/ic_recipe_list"
        android:title="@string/app_bottom_bar_menu_recipe_list_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/appBarRecipeBook"
        android:icon="@drawable/ic_recipe_book"
        android:title="@string/app_bottom_bar_menu_recipe_book_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/appBarShoppingCart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/app_bottom_bar_menu_shopping_cart_title"
        app:showAsAction="ifRoom"/>


</menu>