<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchIngredients"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_double_large"
        android:layout_marginRight="@dimen/spacing_double_large"
        android:hint="@string/search_ingredient_hint"
        app:startIconDrawable="@drawable/ic_search_small"
        style="@style/InputPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingredientsAutocompleteInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:focusedByDefault="false"
            android:textAppearance="@style/Subtitle2"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/suggestedIngredientsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchIngredients"
        android:paddingStart="@dimen/spacing_large"
        android:paddingEnd="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/suggested_ingredients_title"
        android:gravity="center"
        style="@style/Subtitle2"
        android:textColor="@color/secondary_dark_700"/>

    <HorizontalScrollView
        android:id="@+id/suggestedIngredientsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/suggestedIngredientsTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingLeft="@dimen/spacing_large"
        android:paddingRight="@dimen/spacing_large"
        android:orientation="horizontal"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipsGroupSuggestedIngredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:singleSelection="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_standard"
            app:singleLine="true"
            app:chipSpacing="12dp" />

    </HorizontalScrollView>

    <ImageView
        android:id="@+id/searchImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchIngredients"
        android:layout_marginTop="90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_search_big"
        tools:visibility="gone"/>

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchImage"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Heading1"
        android:text="@string/catalog_recipe_list_new_search_title"
        tools:visibility="gone"/>

    <TextView
        android:id="@+id/searchSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchTitle"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Subtitle2"
        android:gravity="center"
        android:textColor="@color/secondary_light_300"
        tools:visibility="gone"
        android:text="@string/catalog_recipe_list_new_search_subtitle"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/suggestedIngredientsContainer"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_xxxlarge"
        android:layout_marginEnd="@dimen/spacing_xxxlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_market_recipe" />

    <TextView
        android:id="@+id/recipeListEmptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        android:text="@string/recipe_list_empty_message"/>

</androidx.constraintlayout.widget.ConstraintLayout>